check.log
    Checking gcal v0.3.2 (/Users/densuke/Documents/2026/02/24/gcal)
error[E0063]: missing fields `recurrence` and `reminders` in initializer of `NewEvent`
  --> src/main.rs:67:25
   |
67 |             let event = NewEvent {
   |                         ^^^^^^^^ missing `recurrence` and `reminders`

error[E0063]: missing fields `recurrence` and `reminders` in initializer of `UpdateEvent`
  --> src/main.rs:99:25
   |
99 |             let event = UpdateEvent {
   |                         ^^^^^^^^^^^ missing `recurrence` and `reminders`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `gcal` (bin "gcal") due to 2 previous errors
